Closed Bug 1962613 Opened 11 months ago Closed 8 months ago

[HDR/KDE] Titlebar flip makes main window missing

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
142 Branch
Tracking Status
firefox142 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

[HDR/KDE] Titlebar flip makes main window missing. Gnome works.

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com: https://github.com/mozilla-firefox/firefox/commit/85bcf77665be https://hg.mozilla.org/integration/autoland/rev/5876e3948262 [HDR/Wayland] Repaint all layers when system titlebar renderign is flipped r=emilio
Status: ASSIGNED → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch
QA Whiteboard: [qa-triage-done-c143/b142]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: