Bug 1962613 [HDR/Wayland] Repaint all layers when system titlebar renderign is flipped r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D257689